modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
 <html>
-	<br>
+
+<head>
+	<meta charset="utf-8">
+	<title>Wing Din Gasterの主页</title>
+</head>
+
+<body>
 	<h1>欢迎来到我的个人主页</h1>
+	<p>只是一个初三牲的Github Page罢了</p>
+</body>
+
 </html>
