--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 	<meta charset="utf-8">
 	<title>Wing Din Gasterの主页</title>
 </head>
-
-<>
 	<h1>欢迎来到我的个人主页</h1>
 	<p>只是一个初三牲的Github Page罢了</p>
 	<p>为什么Github Page不支持PHP啊！</p>
+	<iframe src="/README.md" width="100%" height="100%" frameborder="0" scrolling="yes"></iframe>
 </body>
 
 </html>
