--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Wing Din Gasterの主页</title>
 	<style>
 		/* 加上 -webkit- 注意兼容 */
-		h1 {
+		colorful-text {
 			background: -webkit-linear-gradient(135deg,
 					#0eaf6d,
 					#ff6ac6 25%,
@@ -38,35 +38,21 @@
 			}
 		}
 
-		h1:hover {
+		colorful-text:hover {
 			animation: flowCss 4s infinite linear;
 		}
 	</style>
 </head>
 
 <body>
-	<h1 style="text-align: center; font-size: 50px;">欢迎来到我的<a href="https://wangyiben0.github.io">个人主页</a></h1>
+	<colorful-text style="text-align: center; font-size: 50px;">欢迎来到我的<a href="https://wangyiben0.github.io">个人主页</a></colorful-text>
 	<p style="font-size: 25px;">只是<a href="https://github.com/WangYiben0">一个初三牲</a>的<a href="https://github.com/WangYiben0/WangYiben0.github.io">Github Page</a>罢了<br />
 		但为什么Github Page不支持PHP啊！</p><br />
 	<img src="Resource/Picture/Arcshin.png" name="源神，启动！"></img><br />
 	<img src="Resource/Picture/Alien_Dove.png" name="外星九鸟"></img><br />
 	<a href="https://hyzq.github.io/HYZQ-BTS-V1.4.5" style="text-decoration: none;">
-		<h1 style="
-			font-size: 100%;
-			background: -webkit-linear-gradient(135deg,
-			#0eaf6d,
-			#ff6ac6 25%,
-			#147b96 50%,
-			#e6d205 55%,
-			#2cc4e0 60%,
-			#8b2ce0 80%,
-			#ff6384 95%,
-			#08dfb4);
-		-webkit-text-fill-color: transparent;
-		-webkit-background-clip: text;
-		-webkit-background-size: 200% 100%;
-		-webkit-animation: flowCss 12s infinite linear;" name="HYZQ BTS 1.4.5" title="浩阳正气的坏时光模拟器（sans模拟器）1.4.5（最新）">HYZQ's
-			Bad Time Simulator</h1>
+		<colorful-text name="HYZQ BTS 1.4.5" title="浩阳正气的坏时光模拟器（sans模拟器）1.4.5（最新）">HYZQ's
+			Bad Time Simulator</colorful-text>
 	</a>
 </body>
 </html>
