--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-	<colorful-text style="text-align: center; font-size: 50px;">欢迎来到我的<a href="https://wangyiben0.github.io">个人主页</a></colorful-text>
+	<h1><colorful-text style="text-align: center; font-size: 50px;">欢迎来到我的<a href="https://wangyiben0.github.io">个人主页</a></colorful-text></h1>
 	<p style="font-size: 25px;">只是<a href="https://github.com/WangYiben0">一个初三牲</a>的<a href="https://github.com/WangYiben0/WangYiben0.github.io">Github Page</a>罢了<br />
 		但为什么Github Page不支持PHP啊！</p><br />
 	<img src="Resource/Picture/Arcshin.png" name="源神，启动！"></img><br />
@@ -53,6 +53,9 @@
 	<a href="https://hyzq.github.io/HYZQ-BTS-V1.4.5" style="text-decoration: none;">
 		<colorful-text name="HYZQ BTS 1.4.5" title="浩阳正气的坏时光模拟器（sans模拟器）1.4.5（最新）">HYZQ's
 			Bad Time Simulator</colorful-text>
+	</a>
+	<a href="/9.30/index.html">
+		<p>9.30特供：王妤欣Happy Birthday!(Tips:滑动鼠标试试看！)</p>
 	</a>
 </body>
 </html>
